Vertical search: ensure results float over site preview (#31661)
* #31609 was a hotfix to ensure that Jetpack connect site vertical results weren't cut off. This PR reinstates the position: absolute so that the fieldset floats over the site preview, but also sets the layout overflow to visible on Jetpack to avoid cutting off the results list.

* Overwriting positioning on the form-fieldset to avoid overflow issues on smaller device heights. Props @keoshi

--- a/client/jetpack-connect/style.scss
+++ b/client/jetpack-connect/style.scss
@@ -942,6 +942,10 @@ $colophon-height: 50px; // wpcomColophon element at the bottom
 			box-shadow: inset 0 0 0 2px var( --color-jetpack );
 		}
 	}
+
+	.site-topic__content .form-fieldset {
+		position: relative;
+	}
 }
 
 .is-section-checkout.is-jetpack-site {
