--- a/client/signup/steps/site-topic/style.scss
+++ b/client/signup/steps/site-topic/style.scss
@@ -7,6 +7,7 @@ body.is-section-jetpack-connect .site-topic__content {
 
 	.form-fieldset {
 		margin-bottom: 0;
+		position: absolute;
 		left: 0;
 		right: 0;
 		z-index: 1000; // I know, I know...
